--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,8 @@ jobs:
         uses: docker/metadata-action@v4.0.1
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{ matrix.version }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3.0.0
@@ -51,7 +53,7 @@ jobs:
           context: .
           push: true
           build-args: VERSION=${{ matrix.version }}
-          tags: ${{ matrix.version }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
 ...
